MyDev/src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Offer_Expiration_Date__c</fullName>
        <description>This specifies the offer expiration date</description>
        <label>Offer Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Release_Date__c</fullName>
        <description>This specifies the date when offer is released.</description>
        <label>Offer Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelatedPosition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field gets the related Position</description>
        <label>RelatedPosition</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Offer-{000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>